ApexWorkbook/src/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Insurance_amount__c</fullName>
        <label>Insurance amount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_cost__c</fullName>
        <formula>CASE( Shipping_method__c, &quot;normal&quot;, 10, &quot;priority&quot;, 10*1.5, &quot;overnight&quot;, 10*2.0,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_method__c</fullName>
        <label>Shipping method</label>
        <picklist>
            <picklistValues>
                <fullName>normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>overnight</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_city__c</fullName>
        <label>To city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_country__c</fullName>
        <label>To country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_location__c</fullName>
        <label>To location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>To_state__c</fullName>
        <label>To state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_street__c</fullName>
        <label>To street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_zip__c</fullName>
        <label>To zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>